# lab_docker

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  LICENSE  README.md  REPORT.md  docker-compose.yml  solver.cpp  terminal_log.txt
.github/workflows/: ci.yml  coveralls.yml  release.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
db/: init.sql
tests/: test_account.cpp  test_transaction.cpp  test_transaction_mock.cpp
